# slimgui

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  pyproject.toml
docs/: apiref.md
example/: app.py
src/: imgui_enums.inl  imgui_funcs.inl  slimgui_ext.cpp
src/slimgui/: __init__.py
src/slimgui/imgui/: __init__.py
src/slimgui/slimgui_ext/: __init__.pyi
tests/: test_api_compat.py  test_callbacks.py  test_callbacks_interactive.py  test_simple.py  verify_api.py
tests/fixtures/: imgui_baseline.pyi
tools/: amend_func_docs.py  build_docs.py  gen_bindings.py  imgui_vendor.py
